// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the AnalysisResult component matches the snapshot 1`] = `
.c4 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93, 35, 122, 0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c4:hover {
  border-color: #fff;
}

.c4:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c0 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c3 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c2 {
  width: 13px;
  height: 13px;
  fill: blue;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  width: 18px;
  height: 18px;
  fill: #fff;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<li
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2"
    focusable="false"
    role="img"
  />
  <p
    className="c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c4"
    disabled={false}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c5"
      focusable="false"
      role="img"
    />
  </button>
</li>
`;

exports[`the AnalysisResult component with disabled buttons matches the snapshot 1`] = `
.c4 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93, 35, 122, 0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c4:hover {
  border-color: #fff;
}

.c4:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c0 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c3 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c2 {
  width: 13px;
  height: 13px;
  fill: blue;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  width: 18px;
  height: 18px;
  fill: #ddd;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<li
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2"
    focusable="false"
    role="img"
  />
  <p
    className="c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c4"
    disabled={true}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c5"
      focusable="false"
      role="img"
    />
  </button>
</li>
`;

exports[`the AnalysisResult component with hidden buttons matches the snapshot 1`] = `
.c0 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c3 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c2 {
  width: 13px;
  height: 13px;
  fill: blue;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<li
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2"
    focusable="false"
    role="img"
  />
  <p
    className="c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing great!",
      }
    }
  />
</li>
`;

exports[`the AnalysisResult component with html in the text matches the snapshot 1`] = `
.c4 {
  box-sizing: border-box;
  min-width: 32px;
  display: inline-block;
  border: 1px solid #ccc;
  background-color: #a4286a;
  box-shadow: inset 0 2px 0 rgba( 93, 35, 122, 0.7 );
  border-radius: 3px;
  cursor: pointer;
  padding: 0;
  height: 23px;
}

.c4:hover {
  border-color: #fff;
}

.c4:disabled {
  background-color: #f7f7f7;
  box-shadow: none;
  border: none;
  cursor: default;
}

.c0 {
  min-height: 24px;
  padding: 0 4px 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  margin-top: 3px;
  position: relative;
  left: -1px;
}

.c3 {
  margin: 0 8px 0 11px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c2 {
  width: 13px;
  height: 13px;
  fill: blue;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c5 {
  width: 18px;
  height: 18px;
  fill: #fff;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

<li
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1 c2"
    focusable="false"
    role="img"
  />
  <p
    className="c3"
    dangerouslySetInnerHTML={
      Object {
        "__html": "You're doing <b>great!</b>",
      }
    }
  />
  <button
    aria-label="SEOResult"
    aria-pressed={true}
    className="c4"
    disabled={false}
    id="Result button"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-hidden="true"
      className="c5"
      focusable="false"
      role="img"
    />
  </button>
</li>
`;
